criado controllerDoctor e ModelDoctor

--- a/suaconsulta-api/appsettings.json
+++ b/suaconsulta-api/appsettings.json
@@ -1,9 +1,13 @@
 {
-  "Logging": {
-    "LogLevel": {
-      "Default": "Information",
-      "Microsoft.AspNetCore": "Warning"
+    "Logging": {
+        "LogLevel": {
+            "Default": "Information",
+            "Microsoft.AspNetCore": "Warning"
+        }
+    },
+    "AllowedHosts": "*",
+
+    "ConnectionStrings": {
+        "Postgres": "server=localhost;port=5432;user id=postgres;password=postgres;database=confin"
     }
-  },
-  "AllowedHosts": "*"
 }
