add new comportaments to the components

--- a/suaconsulta-app/.dockerignore
+++ b/suaconsulta-app/.dockerignore
@@ -1,24 +1,4 @@
 node_modules
 build
-.dockerignore
-Dockerfile
-package-lock.json
-npm-debug.log
-README.md
-src/setupTests.ts
-src/reportWebVitals.ts
-public/favicon.ico
-public/manifest.json
-public/robots.txt
-public/logo192.png
-public/logo512.png
-public/index.html
-src/App.test.tsx
-src/index.css
-src/App.css
-src/react-app-env.d.ts
-src/logo.svg
-src/index.tsx
-src/App.tsx
-tailwind.config.js
-tsconfig.json
+.git
+.env
