feat - add new component for doctor schedule time

--- a/.gitignore
+++ b/.gitignore
@@ -1,2 +1,3 @@
 suaconsulta-api/.vs/suaconsulta-api/FileContentIndex/17f41e35-3680-45b2-800e-911ebcc2c865.vsidx
 suaconsulta-api/.vs/suaconsulta-api/FileContentIndex/fad6fd51-985b-47d2-9df6-cc0a3ba6f078.vsidx
+suaconsulta-api/.vs/suaconsulta-api/FileContentIndex/33c11ffd-1bd7-4923-a2db-bb1c0e70cd84.vsidx
