--- a/suaconsulta-app/Dockerfile
+++ b/suaconsulta-app/Dockerfile
@@ -9,20 +9,18 @@ COPY package.json ./
 RUN npm install
 
 # Copy the entire project directory
-# This ensures all files including public/index.html are copied
 COPY . ./
-
-# Debug to verify files were copied correctly
-RUN ls -la public/
 
 # Build the application
 RUN npm run build
 
-# Install serve for production hosting
+# Install serve
 RUN npm install -g serve
 
 # Expose port 3000
 EXPOSE 3000
 
-# Command to run the application
-CMD ["serve", "-s", "build"]
+# Command with SPA support
+CMD ["serve", "-s", "build", "-l", "3000"]
+
+#docker run -d -p 3000:3000 --name minha-react-app minha-react-app
